--- a/Server/package.json
+++ b/Server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "moment": "^2.29.3",
     "mongodb": "^4.6.0",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "yup": "^0.32.11"
   }
 }
