--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "emoji-picker-react": "^3.5.1",
+    "gapi-script": "^1.2.0",
     "react": "^18.1.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
+    "react-google-login": "^5.2.2",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
