--- a/Server/package.json
+++ b/Server/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.3",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.4",
+    "socket.io": "^4.5.1",
     "yup": "^0.32.11"
   }
 }
